# container-orbit

./: Cargo.toml  README.md
.github/workflows/: release.yml
docs/: PLAN.md
src/: cli.rs  config.rs  docker_ctx.rs  forwarder.rs  main.rs  metrics.rs  net_scan.rs  ssh.rs  util.rs
src/commands/: doctor.rs  down.rs  funding.rs  host_init.rs  host_setup.rs  link.rs  logs.rs  mcp.rs  mod.rs  ports.rs  run_worker.rs  service.rs  setup.rs  status.rs  up.rs
src/host/: mod.rs  unix.rs  windows_wsl.rs
src/mcp/: mod.rs
