[package]
name = "container-orbit"
version = "0.1.0"
edition = "2021"
description = "Delegate Docker to a beefier machine on your LAN — transparently, over SSH, with automatic port forwarding back to localhost."
license = "MIT"
repository = "https://github.com/slothlabsorg/container-orbit"
readme = "README.md"

[[bin]]
name = "orbit"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "signal", "time", "fs", "net", "io-std", "io-util"] }
bollard = "0.17"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
owo-colors = "4"
dirs = "5"
futures-util = "0.3"
serde_json = "1"
inquire = "0.7"

[profile.release]
opt-level = 3
lto = "thin"
strip = true
